# IT-rental-web-application

./: .env  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  seed.py
.github/workflows/: tests.yml
app/: __init__.py
app/models/: __init__.py
app/routes/: admin.py  assets.py  auth.py  main.py  rentals.py  tickets.py
app/static/css/: main.css
app/static/js/: app.js
app/templates/: base.html
app/templates/admin/: audit_log.html  user_form.html  users_list.html
app/templates/assets/: confirm_delete.html  list.html
app/templates/auth/: login.html  profile.html  register.html
app/templates/errors/: 400.html  403.html  404.html  429.html  500.html
app/templates/main/: dashboard_admin.html  dashboard_user.html
app/templates/rentals/: admin_items.html  admin_rentals.html  catalog.html  item_form.html  my_rentals.html  request.html
app/templates/tickets/: confirm_delete.html  list.html
app/utils/: forms.py  security.py
instance/: itsm.db
tests/: test_app.py
