[project]
name = "itsm-app"
version = "0.1.0"
description = "Office device rental portal for Legal and General staff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach==6.1.0",
    "coverage==7.5.4",
    "email-validator==2.2.0",
    "flask==3.0.3",
    "flask-limiter==3.7.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "pytest==8.2.2",
    "pytest-flask==1.3.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.31",
    "werkzeug==3.0.3",
    "wtforms==3.1.2",
    "gunicorn==21.2.0",
]
